finished header, started main

--- a/index.html
+++ b/index.html
@@ -14,7 +14,11 @@
         <div class="container">
             <div class="header-container">
                 <div class="header-logo">
-                    <a href="index.html"><img src="./img/logo.png" alt=""></a>
+                    <a href="index.html"><img src="./images/logo.png" alt="missing"></a>
+                </div>
+                <div class="searchBar">
+                    <input type="text" placeholder="Search for a product...">
+                    <button>SEARCH</button>
                 </div>
                 <div class="header-menu">
                     <ul>
@@ -22,6 +26,18 @@
                         <li><a href="about.html">CATALOGUE</a></li>
                         <li><a href="contact.html">GITHUB</a></li>
                     </ul>
+                </div>
+            </div>
+
+            <div class="main">
+                <div class="intro">
+                    <div class="introDes">
+                        <h1>Welcome to the best online store</h1>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quidem. ;</p>
+                    </div>
+                    <div class="introImg">
+                        <img src="./images/intro.svg" alt="missing">
+                    </div>
                 </div>
             </div>
         </div>
