--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style-index.css">
-    <title>Document</title>
+    <link rel="shortcut icon" type="image/x-icon" href="./images/logo.png" />
+    <title>Shoppie</title>
 </head>
 
 <body>
@@ -23,8 +24,8 @@
                 <div class="header-menu">
                     <ul>
                         <li><a href="index.html">HOME</a></li>
-                        <li><a href="about.html">CATALOGUE</a></li>
-                        <li><a href="contact.html">GITHUB</a></li>
+                        <li><a href="#">CATALOGUE</a></li>
+                        <li><a href="https://github.com/Rimaro03/catalogue-website">GITHUB</a></li>
                     </ul>
                 </div>
             </div>
@@ -32,8 +33,12 @@
             <div class="main">
                 <div class="intro">
                     <div class="introDes">
-                        <h1>Welcome to the best online store</h1>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quidem. ;</p>
+                        <h1>Just a clothes shop</h1>
+                        <p>A simple online shop where you can buy the clothes you like</p>
+                        <div class="buttons">
+                            <a href="#" class="catalogue">Catalogue <img src="https://fakestoreapi.com/icons/book.svg"></a>
+                            <a href="https://github.com/Rimaro03/catalogue-website" class="github">GitHub <img src="https://fakestoreapi.com/icons/github.svg"></a>
+                        </div>
                     </div>
                     <div class="introImg">
                         <img src="./images/intro.svg" alt="missing">
