--- a/index.html
+++ b/index.html
@@ -1,52 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/style-index.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./css/style-index.css" />
     <link rel="shortcut icon" type="image/x-icon" href="./images/logo.png" />
     <title>Shoppie</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <header>
-        <div class="container">
-            <div class="header-container">
-                <div class="header-logo">
-                    <a href="index.html"><img src="./images/logo.png" alt="missing"></a>
-                </div>
-                <div class="searchBar">
-                    <input type="text" placeholder="Search for a product...">
-                    <button>SEARCH</button>
-                </div>
-                <div class="header-menu">
-                    <ul>
-                        <li><a href="index.html">HOME</a></li>
-                        <li><a href="#">CATALOGUE</a></li>
-                        <li><a href="https://github.com/Rimaro03/catalogue-website">GITHUB</a></li>
-                    </ul>
-                </div>
-            </div>
-
-            <div class="main">
-                <div class="intro">
-                    <div class="introDes">
-                        <h1>Just a clothes shop</h1>
-                        <p>A simple online shop where you can buy the clothes you like</p>
-                        <div class="buttons">
-                            <a href="#" class="catalogue">Catalogue <img src="https://fakestoreapi.com/icons/book.svg"></a>
-                            <a href="https://github.com/Rimaro03/catalogue-website" class="github">GitHub <img src="https://fakestoreapi.com/icons/github.svg"></a>
-                        </div>
-                    </div>
-                    <div class="introImg">
-                        <img src="./images/intro.svg" alt="missing">
-                    </div>
-                </div>
-            </div>
+      <div class="container">
+        <div class="header-container">
+          <div class="header-logo">
+            <a href="index.html"
+              ><img src="./images/logo.png" alt="missing"
+            /></a>
+          </div>
+          <div class="searchBar">
+            <input type="text" placeholder="Search for a product..." />
+            <button>SEARCH</button>
+          </div>
+          <div class="header-menu">
+            <ul>
+              <li><a href="index.html">HOME</a></li>
+              <li><a href="#">CATALOGUE</a></li>
+              <li>
+                <a href="https://github.com/Rimaro03/catalogue-website"
+                  >GITHUB</a
+                >
+              </li>
+            </ul>
+          </div>
         </div>
-    </header>
-</body>
 
+        <div class="main">
+          <div class="intro">
+            <div class="introDes">
+              <h1>Just a clothes shop</h1>
+              <p>A simple online shop where you can buy the clothes you like</p>
+              <div class="buttons">
+                <a href="#" class="catalogue"
+                  >Catalogue <img src="https://fakestoreapi.com/icons/book.svg"
+                /></a>
+                <a
+                  href="https://github.com/Rimaro03/catalogue-website"
+                  class="github"
+                  >GitHub <img src="https://fakestoreapi.com/icons/github.svg"
+                /></a>
+              </div>
+            </div>
+            <div class="introImg">
+              <img src="./images/intro.svg" alt="missing" />
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="discounts">
+        <div class="discountTitle">
+          <h1>Preview</h1>
+          <p>These are some clothes we sell</p>
+        </div>
+        <div class="slider"></div>
+      </div>
+    </header>
+    <script src="./js/slider.js"></script>
+  </body>
 </html>
