--- a/index.html
+++ b/index.html
@@ -1,90 +1,82 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/style-index.css" />
     <link rel="shortcut icon" type="image/x-icon" href="./images/logo.png" />
     <title>Shoppie</title>
-  </head>
+</head>
 
-  <body>
+<body>
     <div class="container">
-      <header>
-        <div class="header-container">
-          <div class="header-logo">
-            <a href="index.html"
-              ><img src="./images/logo.png" alt="missing"
-            /></a>
-          </div>
-          <div class="searchBar">
-            <input type="text" placeholder="Search for a product..." />
-            <button>
-              <img
-                src="https://img.icons8.com/ios-glyphs/30/000000/search--v1.png"
-              />
-            </button>
-          </div>
-          <div class="header-menu">
-            <ul>
-              <li><a href="index.html">HOME</a></li>
-              <li><a href="#">CATALOGUE</a></li>
-              <li>
-                <a href="https://github.com/Rimaro03/catalogue-website"
-                  >GITHUB</a
-                >
-              </li>
-            </ul>
-          </div>
-        </div>
-      </header>
-
-      <div class="main">
-        <div class="intro">
-          <div class="introDes">
-            <h1>Just a clothes shop</h1>
-            <p>A simple online shop where you can buy the clothes you like</p>
-            <div class="buttons">
-              <a href="#" class="catalogue"
-                >Catalogue <img src="https://fakestoreapi.com/icons/book.svg"
-              /></a>
-              <a
-                href="https://github.com/Rimaro03/catalogue-website"
-                class="github"
-                >GitHub <img src="https://fakestoreapi.com/icons/github.svg"
-              /></a>
+        <header>
+            <div class="header-container">
+                <div class="header-logo">
+                    <a href="index.html"><img src="./images/logo.png" alt="missing" /></a>
+                </div>
+                <div class="searchBar">
+                    <input type="text" placeholder="Search for a product..." />
+                    <button>
+            <img src="https://img.icons8.com/ios-glyphs/30/000000/search--v1.png" />
+          </button>
+                </div>
+                <div class="header-menu">
+                    <ul>
+                        <li><a href="index.html">HOME</a></li>
+                        <li><a href="./pages/catalogue.html">CATALOGUE</a></li>
+                        <li>
+                            <a href="https://github.com/Rimaro03/catalogue-website">GITHUB</a>
+                        </li>
+                    </ul>
+                </div>
             </div>
-          </div>
-          <div class="introImg">
-            <img src="./images/intro.svg" alt="missing" />
-          </div>
+        </header>
+
+        <div class="main">
+            <div class="intro">
+                <div class="introDes">
+                    <h1>Just a clothes shop</h1>
+                    <p>A simple online shop where you can buy the clothes you like</p>
+                    <div class="buttons">
+                        <a href="./pages/catalogue.html" class="catalogueButton">Catalogue <img
+                src="https://fakestoreapi.com/icons/book.svg" /></a>
+                        <a href="https://github.com/Rimaro03/catalogue-website" class="githubButton">GitHub <img
+                src="https://fakestoreapi.com/icons/github.svg" /></a>
+                    </div>
+                </div>
+                <div class="introImg">
+                    <img src="./images/intro.svg" alt="missing" />
+                </div>
+            </div>
         </div>
-      </div>
     </div>
     <div class="footer">
-      <div class="footerDes">
-        <h1>Who we are</h1>
-        <img src="./images/logo.png" alt="" />
-        <p>JUST A CLOTHES SHOP</p>
-        <p>via Roma 78, 76534</p>
-        <p>Cittadella Veneta, ITALY</p>
-      </div>
-      <div class="footerServs">
-        <h1>What we do</h1>
-        <ul>
-          <li>We sell all the types of clothes</li>
-          <li>We have a trustable customer service</li>
-          <li>We have the lowest prices!</li>
-        </ul>
-      </div>
-      <div class="footerContact">
-        <h1>Contact us</h1>
-        <p>Phone: 0123456789</p>
-        <p>Mail: info@justashop.com</p>
-        <p>Pec: justashop@pec-mail.com</p>
-      </div>
+        <div class="footerDes">
+            <h1>Who we are</h1>
+            <img src="./images/logo.png" alt="" />
+            <p>JUST A CLOTHES SHOP</p>
+            <p>via Roma 78, 76534</p>
+            <p>Cittadella Veneta, ITALY</p>
+        </div>
+        <div class="footerServs">
+            <h1>What we do</h1>
+            <ul>
+                <li>We sell all the types of clothes</li>
+                <li>We have a trustable customer service</li>
+                <li>We have the lowest prices!</li>
+            </ul>
+        </div>
+        <div class="footerContact">
+            <h1>Contact us</h1>
+            <p>Phone: 0123456789</p>
+            <p>Mail: info@justashop.com</p>
+            <p>Pec: justashop@pec-mail.com</p>
+        </div>
     </div>
     <script src="./js/slider.js"></script>
-  </body>
+</body>
+
 </html>
