continued sidebar and catalogue

--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
         <div class="main">
             <div class="intro">
                 <div class="introDes">
-                    <h1>Just a clothes shop</h1>
-                    <p>A simple online shop where you can buy the clothes you like</p>
+                    <h1>Just a shop</h1>
+                    <p>A simple online shop where you can buy everything you like!</p>
                     <div class="buttons">
                         <a href="./pages/catalogue.html" class="catalogueButton">Catalogue <img
                 src="https://fakestoreapi.com/icons/book.svg" /></a>
@@ -57,14 +57,14 @@
         <div class="footerDes">
             <h1>Who we are</h1>
             <img src="./images/logo.png" alt="" />
-            <p>JUST A CLOTHES SHOP</p>
+            <p>JUST A SHOP</p>
             <p>via Roma 78, 76534</p>
             <p>Cittadella Veneta, ITALY</p>
         </div>
         <div class="footerServs">
             <h1>What we do</h1>
             <ul>
-                <li>We sell all the types of clothes</li>
+                <li>We sell all the types of things</li>
                 <li>We have a trustable customer service</li>
                 <li>We have the lowest prices!</li>
             </ul>
