--- a/pages/catalogue.html
+++ b/pages/catalogue.html
@@ -38,76 +38,29 @@
 
         <div class="main">
             <div class="sidebar">
-                <h3>Filters</h3>
-                <form action="">
-                    <input type="checkbox" value="Maglioni">
-                    <label for="Maglioni">Maglioni</label><br>
-                    <input type="checkbox" value="Magliette">
-                    <label for="Magliette">Magliette</label><br>
-                    <input type="checkbox" value="Pantaloni">
-                    <label for="Pantaloni">Pantaloni</label><br>
-                </form>
+                <div class="sidebarContent">
+                    <h3>FILTRI</h3>
+                    <form action="">
+                        <input type="checkbox" value="capiUomo">
+                        <label for="capiUomo">Capi uomo</label><br>
+                        <input type="checkbox" value="capiDonna">
+                        <label for="capiDonna">Capi donna</label><br>
+                        <input type="checkbox" value="gioielleria">
+                        <label for="gioielleria">Gioielleria</label><br>
+                        <input type="checkbox" value="elettronica">
+                        <label for="elettronica">Elettronica</label><br>
+                        <br>
+                        <input type="checkbox" value="Maglioni">
+                        <label for="Maglioni">Maglioni</label><br>
+                        <input type="checkbox" value="Magliette">
+                        <label for="Magliette">Magliette</label><br>
+                        <input type="checkbox" value="Pantaloni">
+                        <label for="Pantaloni">Pantaloni</label><br>
+                    </form>
+                </div>
             </div>
             <div class="catalogue">
-                <!--
-                <div class="row">
-                    <div class="card">
-                        <h3>Maglia</h3>
-                        <img src="../images/logo.png" alt="missing">
-                        <ul class="specs">
-                            <li><strong>Taglia: </strong>XS</li>
-                            <li><strong>Materiale: </strong>Cotone</li>
-                            <li><strong>Prezzo: </strong>90$</li>
-                        </ul>
-                    </div>
-                    <div class="card">
-                        <h3>Maglia</h3>
-                        <img src="../images/logo.png" alt="missing">
-                        <ul class="specs">
-                            <li><strong>Taglia: </strong>XS</li>
-                            <li><strong>Materiale: </strong>Cotone</li>
-                            <li><strong>Prezzo: </strong>90$</li>
-                        </ul>
-                    </div>
-                    <div class="card">
-                        <h3>Maglia</h3>
-                        <img src="../images/logo.png" alt="missing">
-                        <ul class="specs">
-                            <li><strong>Taglia: </strong>XS</li>
-                            <li><strong>Materiale: </strong>Cotone</li>
-                            <li><strong>Prezzo: </strong>90$</li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="row">   
-                    <div class="card">
-                        <h3>Maglia</h3>
-                        <img src="../images/logo.png" alt="missing">
-                        <ul class="specs">
-                            <li><strong>Taglia: </strong>XS</li>
-                            <li><strong>Materiale: </strong>Cotone</li>
-                            <li><strong>Prezzo: </strong>90$</li>
-                        </ul>
-                    </div>
-                    <div class="card">
-                        <h3>Maglia</h3>
-                        <img src="../images/logo.png" alt="missing">
-                        <ul class="specs">
-                            <li><strong>Taglia: </strong>XS</li>
-                            <li><strong>Materiale: </strong>Cotone</li>
-                            <li><strong>Prezzo: </strong>90$</li>
-                        </ul>
-                    </div>
-                    <div class="card">
-                        <h3>Maglia</h3>
-                        <img src="../images/logo.png" alt="missing">
-                        <ul class="specs">
-                            <li><strong>Taglia: </strong>XS</li>
-                            <li><strong>Materiale: </strong>Cotone</li>
-                            <li><strong>Prezzo: </strong>90$</li>
-                        </ul>
-                    </div>
-                </div>-->
+
             </div>
         </div>
     </div>
