--- a/pages/catalogue.html
+++ b/pages/catalogue.html
@@ -40,8 +40,8 @@
             <div class="sidebar">
                 <div class="sidebarContent">
                     <h3>FILTRI</h3>
-                    <form action="">
-                        <input type="checkbox" value="capiUomo" class="type" name="men's_clothing">
+                    <form action="" onsubmit="return false">
+                        <input type="checkbox" value="capiUomo" class="type" name="men's-clothing">
                         <label for="capiUomo">Uomo</label><br>
                         <input type="checkbox" value="capiDonna" class="type" name="women's-clothing">
                         <label for="capiDonna">Donna</label><br>
@@ -62,7 +62,6 @@
                 </div>
             </div>
             <div class="catalogue">
-
             </div>
         </div>
     </div>
